--- a/Master/Master.csproj
+++ b/Master/Master.csproj
@@ -29,19 +29,28 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Properties\" />
+    <ProjectReference Include="..\[AI] Log Silencer\[AI] Log Silencer.csproj">
+      <Project>{edf145a5-948f-4d6b-a9f6-651efb864d43}</Project>
+      <Name>[AI] Log Silencer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\[HS2] Log Silencer\[HS2] Log Silencer.csproj">
+      <Project>{e95d8dde-a517-46c1-9fa2-18057b2eee89}</Project>
+      <Name>[HS2] Log Silencer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\[KKS] Log Silencer\[KKS] Log Silencer.csproj">
+      <Project>{4b6514df-04fc-412e-bedb-509cade3f1a5}</Project>
+      <Name>[KKS] Log Silencer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\[KK] Log Silencer\[KK] Log Silencer.csproj">
+      <Project>{2dd66dda-ca1b-4465-a67d-3f8b9c24b110}</Project>
+      <Name>[KK] Log Silencer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
