--- a/[AI] Log Silencer/packages.config
+++ b/[AI] Log Silencer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExtensibleSaveFormat.AIGirl" version="16.5.0" targetFramework="net472" developmentDependency="true" />
   <package id="IllusionLibs.AIGirl.Assembly-CSharp" version="2020.5.29.4" targetFramework="net472" />
   <package id="IllusionLibs.AIGirl.Assembly-CSharp-firstpass" version="2020.5.29.4" targetFramework="net472" />
   <package id="IllusionLibs.AIGirl.Sirenix.Serialization" version="2020.5.29.4" targetFramework="net472" />
@@ -10,5 +11,5 @@
   <package id="IllusionLibs.AIGirl.UnityEngine.UIModule" version="2018.2.21.4" targetFramework="net472" />
   <package id="IllusionLibs.BepInEx" version="5.4.20" targetFramework="net472" />
   <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net472" />
-  <package id="IllusionModdingAPI.AIAPI" version="1.35.0" targetFramework="net472" developmentDependency="true" />
+  <package id="IllusionModdingAPI.AIAPI" version="1.34.0" targetFramework="net472" developmentDependency="true" />
 </packages>
