--- a/[KK] Log Silencer/[KK] Log Silencer.csproj
+++ b/[KK] Log Silencer/[KK] Log Silencer.csproj
@@ -8,12 +8,13 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Log_Silencer</RootNamespace>
     <AssemblyName>[KK] Log Silencer</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
